tests/derive_errors/union.rs
#[derive(jtd_derive::JsonTypedef)]
union Foo {
    bar: u32,
}

fn main() {}
